mule-fundamentals/v/3.5/begin-with-the-basics.adoc
= Begin with the Basics

The following sections aim to help you get up to speed on some key Anypoint Platform concepts you'll need to be familiar with to be successful. If you feel that you need more background on any of these concepts, follow the provided links to the appropriate reference material.

== Flows and Messages

[width="100%",cols="50%,50%",]
|===
|image:flow1.png[flow1]
Mule applications accept and process messages through a series of *message processors* plugged together in a *flow*. A typical flow has a *message source*, which accepts a message from an external source triggering the execution of the flow, and any number of *message processors*, which transform, filter, enrich, and otherwise process the message. A single flow can be a complete application by itself, or you can connect multiple flows together to create more complex applications.   
|link:/mule-fundamentals/v/3.5/mule-concepts[Mule Concepts]  +
link:/mule-fundamentals/v/3.5/global-elements[Global Elements]  +
link:/mule-fundamentals/v/3.5/basic-studio-tutorial[Basic Studio Tutorial] +
link:/mule-fundamentals/v/3.5/mule-message-tutorial[Mule Message Tutorial]
|===

Mule applications also make use of *global elements*, which are reusable chunks of code that sit outside of flows and can be invoked by multiple elements in any flow within the application.

A Mule message consists of a *header* and a *payload*. The payload contains the message data, and the header contains metadata about the message in the form of *properties* and *variables*. Both properties and variables are key-value pairs that contain useful information about a message that help to get it where it's going. 

image:flow.png[flow]

== Message Processors

[width="100%",cols="50%,50%",]
|===
|image:icon-jigsaw-blue-big.png[icon-jigsaw-blue-big]Use *Message Processors* to act upon a message to manipulate or enrich the message payload, or to add or remove message properties or variables. Divided into groups according to their function, each message processor falls into one of several categories:
|link:/mule-user-guide/v/3.5/message-processors[Message Processors] +
link:/mule-user-guide/v/3.5/error-handling[Error Handling]  +
link:/mule-user-guide/v/3.5/business-events[Business Events] 
|===

* **Connectors **plug into external data sources via standard protocols or third-party APIs
* *Filters* limit processing of messages based on set criteria.
* *Components* execute specific logic upon a message, including custom-logic programmed in Java, Javascript, Groovy, Python or Ruby.
* *Routers* direct messages through different pathways in an application depending upon content or other set criteria.
* *Scopes* wrap snippets of code to define fine-grained behavior within a flow.
* *Transformers* convert data types and formats so as to "translate" messages between applications or systems.
* *Exception Strategies* handle any errors that occur during message processing.
* *Business Events* capture data related to key performance indicators

== Batch Processing

[width="100%",cols="50%,50%",]
|=====
|image:batch.png[batch]Anypoint Studio also supports *batch jobs* as an alternative to standard flows. A batch job is a block of code that splits messages into individual records, performs actions upon each record, then reports on the results and potentially pushes the processed output to other systems or queues. This functionality is particularly useful when working with streaming input or when engineering "near real-time" data integration between SaaS applications.
|link:/mule-user-guide/v/3.5/batch-processing[Batch Processing] +
link:/mule-user-guide/v/3.5/salesforce-to-database-example[Example: Salesforce to Database with Batch]
|=====

== Mule Expression Language

[width="100%",cols="50%,50%",]
|====
**image:expressionLang.png[expressionLang] Mule Expression Language (MEL)** is the primary language used for formulating expressions in Mule, allowing you to access, manipulate, and use information from the message and its environment. |link:/mule-user-guide/v/3.5/mule-expression-language-mel[Mule Expression Language] +
link:/mule-user-guide/v/3.5/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]
|====

At runtime, Mule evaluates expressions while executing a flow to: +

* extract information that it can use to process the current message +

* set or manipulate a value in the message header or payload +

* perform an operation on information in the message, application, Mule instance, or server

[source, code, linenums]
----
#[message.inboundProperties.propertyName]
----

== Running Applications


image:pressPlay.png[pressPlay]Once you have created a Mule application, then what? How and where do you make the code come to life so you can see it in action? The quickest, easiest way is to deploy your application on the embedded *Mule Server*, included with Anypoint Studio. There's a shiny *play* button on the top menu bar, just like in Eclipse. Click it and Studio deploys your application to a virtual server running on your machine.

* link:/mule-fundamentals/v/3.5/deploying-mule-applications[Deploying Mule Applications] 
* link:/mule-user-guide/v/3.5/deployment-scenarios[Deployment Scenarios]
* link:/mule-management-console/v/3.5[Mule Management Console] 
* link:/runtime-manager/cloudhub[CloudHub]
* link:/docs/display/35X/Configuring+an+API+Gateway[API Gateway]


This is great for testing, but probably not ideal for the final implementation of your service; there are several other deployment options to chose from:

* export the application to a *Mule Enterprise Server*
* deploy the application in the **Mule Management Console's** Application Repository
* deploy to *CloudHub*
* deploy to an *API Gateway*

== See Also

* **NEXT: **link:/mule-fundamentals/v/3.5/download-and-launch-anypoint-studio[Download and Launch Anypoint Studio]
* Check our library of functional link:/mule-user-guide/v/3.5/mule-examples[Mule Examples].
* Try out some http://training.mulesoft.com[free online training].
* Explore topics discussed in blog posts on the link:http://blogs.mulesoft.org/[MuleSoft Blog].
* Need more help? Join the discussion in the link:http://forum.mulesoft.org/mulesoft[forum]. 
