mule-fundamentals/v/3.6/begin-with-the-basics.adoc
= Begin with the Basics
:keywords: studio, tutorial, request, response, http, listener, config

The following sections help you understand key Anypoint Platform concepts. For more information, follow the links to the appropriate reference material.

== Flows and Messages

Mule applications accept and process messages through a series of *message processors* that you can plug together that forma a *flow*. A typical flow has a *message source*, which accepts a message from an external source triggering the execution of the flow, and any number of *message processors*, which transform, filter, enrich, and otherwise process the message. A single flow can be a complete application by itself, or you can connect multiple flows together to create more complex applications. 

For more information on flows and messages, see:

* link:/mule-fundamentals/v/3.6/mule-concepts[Mule Concepts]
* link:/mule-fundamentals/v/3.6/global-elements[Global Elements]
* link:/mule-fundamentals/v/3.6/basic-studio-tutorial[Basic Studio Tutorial]
* link:/mule-fundamentals/v/3.6/mule-message-tutorial[Mule Message Tutorial]

Mule applications also make use of *global elements*, which are reusable chunks of code that sit outside of flows and can be invoked by multiple elements in any flow within the application.

A Mule message consists of a *header* and a *payload*. The payload contains the message data, and the header contains metadata about the message in the form of *properties* and *variables*. Both properties and variables are key-value pairs that contain useful information about a message that help to get it where it's going. 

image:flow-1.png[flow-1]

Note: In this example, SOAP connectivity is implemented by the CXF component.

== Message Processors

Use *Message Processors* to act upon a message to manipulate or enrich the message payload, or to add or remove message properties or variables. Divided into groups according to their function, each message processor falls into one of several categories:

* *Connectors* send and receive data, and plug into external data sources via standard protocols or third-party APIs.
* *Filters* limit processing of messages based on set criteria.
* *Components* execute specific logic upon a message, including custom-logic programmed in Java, Javascript, Groovy, Python, or Ruby.
* *Routers* direct messages through different pathways in an application depending upon content or other set criteria.
* *Scopes* wrap snippets of code to define fine-grained behavior within a flow.
* *Transformers* convert data types and formats so as to "translate" messages between applications or systems.
* *Exception Strategies* handle any errors that occur during message processing.
* *Business Events* capture data related to key performance indicators

For more information on message processors, see:

* link:/mule-user-guide/v/3.6/message-processors[Message Processors]
* link:/mule-user-guide/v/3.6/error-handling[Error Handling]
* link:/mule-user-guide/v/3.6/business-events[Business Events]

== Batch Processing

Anypoint Studio also supports *batch jobs* as an alternative to standard flows. A batch job is a block of code that splits messages into individual records, performs actions upon each record, then reports on the results and potentially pushes the processed output to other systems or queues. This functionality is particularly useful when working with streaming input or when engineering "near real-time" data integration between SaaS applications.

For more information on batch processing, see:

* link:/mule-user-guide/v/3.6/batch-processing[Batch Processing]
* link:/mule-fundamentals/v/3.6/anypoint-exchange[Examples]


== Mule Expression Language

Mule Expression Language (MEL) is the primary language used for formulating expressions in Mule, allowing you to access, manipulate, and use information from the message and its environment. 

 At runtime, Mule evaluates expressions while executing a flow to:

* Extract information that it can use to process the current message.
* Set or manipulate a value in the message header or payload.
* Perform an operation on information in the message, application, Mule instance, or server.

[source, code, linenums]
----
#[message.inboundProperties.propertyName]
----

For more information on MEL, see:

* link:/mule-user-guide/v/3.6/mule-expression-language-mel[Mule Expression Language]
* link:/mule-user-guide/v/3.6/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]


== Running Applications

After you have create a Mule application, then what? How and where do you make the code come to life so you can see it in action? The quickest and easiest way is to deploy your application on the embedded *Mule Server*, included with Anypoint Studio. Click the shiny *play* button on the top menu bar, just like in Eclipse, and Studio deploys your application to a virtual server running on your machine.

This is great for testing, but probably not ideal for the final implementation of your service; there are several other deployment options to choose from:

* Export the application to a *Mule Enterprise Server*
* Deploy the application in the **Mule Management Console's** Application Repository
* Deploy to *CloudHub*
* Deploy to an *API Gateway*

For more information on running applications, see:

* link:/mule-fundamentals/v/3.6/deploying-mule-applications[Deploying Mule Applications]
* link:/mule-user-guide/v/3.6/deployment-scenarios[Deployment Scenarios]
* link:/mule-management-console/v/3.7[Mule Management Console]
* link:/runtime-manager[Runtume Manager]
* link:/anypoint-platform-for-apis/configuring-an-api-gateway[API Gateway]


== See Also

* *NEXT:* link:/mule-fundamentals/v/3.6/download-and-launch-anypoint-studio[Download and Launch Anypoint Studio].
* link:/mule-fundamentals/v/3.6/anypoint-exchange[Examples].
* Try out some link:http://training.mulesoft.com[free online training].
* Explore topics discussed in blog posts on the link:http://blogs.mulesoft.org/[MuleSoft Blog].
* Need more help? Join the discussion in the link:http://forum.mulesoft.org/mulesoft[forum]. 
